--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32" />
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
 <link fetchpriority="low" href="/site.webmanifest" rel="manifest" />
-<title>PrintN&nbsp;– Code, CTFs & Privacy
+<title>PrintN&nbsp;– Programming, CTFs & Privacy
     </title>
   <meta name="description" content="Meet PrintN—software developer, CTF player, and privacy advocate. I build secure, minimalist …" /><link rel="canonical" href="http://localhost:1313/" itemprop="url" />
 
